feat: adiciona vínculo de variáveis no template
